Fixing issue AR got stuck

--- a/src/app/activities/ar2/ar2.component.scss
+++ b/src/app/activities/ar2/ar2.component.scss
@@ -15,7 +15,7 @@
 }
 .card-syllables-body-wrap-ar2{
     opacity: 0;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.2s ease;
 }
 .card-content-body-btn-wrap{
 	display: flex;
